--- a/index.css
+++ b/index.css
@@ -376,7 +376,7 @@ header {
 
 /* ======================== PACKS ======================== */
 .packs {
-  padding: 100px 20px;
+  padding: 6.25rem 1.25rem;
   text-align: center;
   background: #f8f8f8;
 }
@@ -387,20 +387,19 @@ header {
 }
 
 .packs h2 {
-  font-size: 36px;
+  font-size: 2.25rem;
   color: #6a0dad;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
 }
-/* boton con estilo en packs */
+
+/* botón con estilo en packs */
 .packs button {
   background-color: #d8c3eb;
   border: none;
   z-index: 1;
-
-  /* Tamaño y estilo igual al <p> */
-  width: 300px;
-  height: 75px;
-  font-size: 30px;
+  width: 18.75rem;
+  height: 3.75rem;
+  font-size: 1.875rem;
   font-weight: bold;
   color: white;
   position: relative;
@@ -428,15 +427,14 @@ header {
 }
 
 .bpacks button:active {
-  top: 2px;
+  top: 0.125rem;
 }
-
 
 .packs-container {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 2.5rem;
   margin: auto;
 }
 
@@ -445,9 +443,9 @@ header {
   position: relative;
   overflow: hidden;
   background-color: #8a2be2;
-  border-radius: 15px;
-  width: 300px;
-  height: 350px;
+  border-radius: 0.9375rem;
+  width: 16.875rem;
+  height: 18.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -480,11 +478,54 @@ header {
   background-size: 15.625vw;
   position: relative;
   z-index: 2;
-  font-size: 30px;
+  font-size: 1.875rem;
   font-weight: bold;
-  margin-top: 10px;
-  width: 300px;
-  height: 75px;
+  margin-top: 0.625rem;
+  width: 18.75rem;
+  height: 4.6875rem;
+}
+
+/* ================= RESPONSIVE ================= */
+@media (max-width: 768px) {
+  .packs {
+    padding: 3.75rem 1rem;
+  }
+
+  .packs h2 {
+    font-size: 1.75rem;
+  }
+
+  .packs button {
+    background-color: #d8c3eb;
+    border: none;
+    z-index: 1;
+    font-size: 1.875rem;
+    font-weight: bold;
+    color: white;
+    position: relative;
+    padding: 0.75rem 2rem; 
+    border-radius: 8px;
+  }
+  
+  
+
+  .packs-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.25rem;
+  }
+
+  .pack {
+    width: 90%;
+    height: auto;
+  }
+
+  .pack p {
+    width: 100%;
+    font-size: 1.25rem;
+    height: auto;
+    padding: 2rem;
+  }
 }
 
 
